<resources>
    <string name="app_name">Tip Calculator SP22</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="currency_symbol" translatable="false">$</string>
    <string name="tip_percent" translatable="false">Tip Percent</string>
    <string name="default_tip" translatable="false">15%</string>
    <string name="tip_amount" translatable="false">Tip Amount</string>
    <string name="default_amount" translatable="false">0.00</string>
    <string name="total" translatable="false">Total</string>
    <string name="no_round" translatable="false">No Round</string>
    <string name="roundTip" translatable="false">Round Tip</string>
    <string name="round_total" translatable="false">Round Total</string>
    <string name="rounding" translatable="false">Rounding</string>
    <string name="split_bill" translatable="false">Split the Bill?</string>
    <string name="calculate" translatable="false">Calculate</string>
    <string-array name="split_array">
        <item>No</item>
        <item>Two Ways</item>
        <item>Three Ways</item>
        <item>Four Ways</item>
    </string-array>
    <string name="each_pay" translatable="false">Each Pays</string>
</resources>